# semantic_code_search

./: .env.example  .gitignore  pyproject.toml
AgentForge/: CLAUDE.md  README.md  pyproject.toml
AgentForge/config/: .env.example  mcp.yaml  models.yaml
AgentForge/examples/: basic_agent.py  full_agent.py
AgentForge/skills/: skill_template.md
AgentForge/src/: __init__.py
AgentForge/src/agents/: __init__.py
AgentForge/src/core/: __init__.py  agent.py  background.py  context.py  messaging.py  task.py  todo.py
AgentForge/src/core/channel/: __init__.py  api.py  base.py  cli.py
AgentForge/src/core/logger/: __init__.py  local_logger.py  remote_logger.py
AgentForge/src/core/mcp/: __init__.py  client.py  config.py
AgentForge/src/core/models/: __init__.py  client.py  config.py
AgentForge/src/core/skills/: __init__.py  loader.py  manager.py
AgentForge/src/core/subagent/: __init__.py  subagent.py
AgentForge/src/core/tools/: __init__.py  base.py  bash.py  file_ops.py  glob.py  grep.py  load_skill.py  registry.py
AgentForge/tests/: __init__.py  test_agent.py  test_background.py  test_context.py  test_task.py  test_todo.py  test_tools.py
Documents/ComfyUI/models/diffusion_models/: .msc
QENAS/: .gitignore  QENAS_DEVLOG.md  README.md  pyproject.toml
QENAS/examples/: qenas_demo.py  qenas_visualization_demo.py
QENAS/qenas_backtest/: __init__.py  engine.py  metrics.py
QENAS/qenas_core/: __init__.py
QENAS/qenas_core/ecosystem/: __init__.py  niche_manager.py
QENAS/qenas_core/emergent/: __init__.py  decision.py
QENAS/qenas_core/neuromorphic/: __init__.py  snn.py
QENAS/qenas_core/quantum/: __init__.py  entanglement.py
QENAS/qenas_core/strategies/: __init__.py  base.py  qenas_strategy.py
QENAS/qenas_data/: __init__.py
QENAS/qenas_data/feeders/: __init__.py  ashare_feeder.py  base.py  yahoo_feeder.py
QENAS/qenas_data/processors/: __init__.py  event_processor.py
QENAS/qenas_data/storage/: __init__.py  cache.py
QENAS/qenas_ui/: README.md  index.html  package-lock.json  package.json  tailwind.config.js
QENAS/qenas_ui/src/: App.vue
QENAS/qenas_ui/src/components/: EcosystemView.vue  EntanglementMatrix.vue  EquityCurve.vue  EventTimeline.vue
QENAS/qenas_ui/src/router/: index.js
QENAS/qenas_ui/src/services/: api.js  websocket.js
QENAS/qenas_ui/src/stores/: qenas.js
QENAS/qenas_ui/src/styles/: main.css
QENAS/qenas_ui/src/views/: Backtest.vue  Dashboard.vue  Monitoring.vue  Settings.vue
QENAS/qenas_viz/: __init__.py  dashboard.py  entanglement_viz.py  event_viz.py  performance_viz.py  pyproject.toml
QENAS/qenas_web/: .env.example  README.md  __init__.py  main.py
QENAS/qenas_web/api/: __init__.py
QENAS/qenas_web/api/v1/: __init__.py  backtest.py  router.py  strategies.py  visualization.py
QENAS/qenas_web/config/: __init__.py  settings.py
QENAS/qenas_web/services/: __init__.py  backtest_service.py  strategy_service.py  visualization_service.py
QENAS/qenas_web/websocket/: __init__.py  endpoint.py  manager.py
QENAS/tests/: __init__.py  test_core.py  test_data_sources.py  test_event_integration.py  test_viz.py
agenttest/: .env.example  README.md  config.example.yaml  pyproject.toml
agenttest/agenttest/: __init__.py  main.py
agenttest/agenttest/agent/: __init__.py  base.py  loop.py  state.py
agenttest/agenttest/app/: __init__.py  cli.py  orchestrator.py
agenttest/agenttest/capabilities/: __init__.py
agenttest/agenttest/capabilities/memory/: __init__.py  long_term.py  short_term.py
agenttest/agenttest/capabilities/planning/: __init__.py  task_planner.py
agenttest/agenttest/capabilities/tools/: __init__.py  base.py  bash.py  filesystem.py
agenttest/agenttest/core/: __init__.py  config.py  exceptions.py  types.py
agenttest/agenttest/core/llm/: __init__.py  base.py  openai.py
agenttest/tests/: conftest.py
agenttest/tests/integration/: test_orchestrator.py
agenttest/tests/unit/: test_config.py  test_memory.py  test_planner.py  test_state.py  test_tools.py  test_types.py
docs/superpowers/plans/: 2026-03-30-semantic-code-search-implementation.md
docs/superpowers/specs/: 2026-03-30-semantic-code-search-design.md
resume/background/: 01-personal-info.md  02-work-experience.md  03-projects.md  04-skills.md
semantic_code_search/: .env  README.md  pyproject.toml  test_demo.py
semantic_code_search/src/semantic_mcp/: __init__.py  config.py  main.py
semantic_code_search/src/semantic_mcp/parser/: __init__.py  ast_parser.py  chunker.py
semantic_code_search/src/semantic_mcp/services/: __init__.py  embeddings.py  indexer.py  storage.py  watcher.py
semantic_code_search/test_codebase/: .env  api_handler.c  auth.py  database.py  utils.cpp
semantic_code_search/tests/: __init__.py  test_ast_parser.py  test_indexer.py  test_search.py  test_storage.py
src/semantic_mcp/: config.py  main.py
src/semantic_mcp/parser/: ast_parser.py
src/semantic_mcp/services/: __init__.py  embeddings.py  indexer.py  search.py  storage.py  watcher.py
src/semantic_mcp/utils/: __init__.py  hash.py
tests/: conftest.py  test_ast_parser.py  test_chunker.py  test_config.py  test_embeddings.py  test_indexer.py  test_search.py  test_storage.py  test_watcher.py
