[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "qenas"
version = "0.1.0"
description = "Quantum Entanglement Niche Adaptive Network - 革命性量化交易策略系统"
requires-python = ">=3.10"
readme = "README.md"
license = "MIT"
authors = [
    { name = "QENAS Team" }
]
keywords = [
    "quantitative-trading",
    "quantum-entanglement",
    "evolutionary-algorithm",
    "neuromorphic-computing",
    "complex-systems",
]
classifiers = [
    "Development Status :: 3 - Alpha",
    "Intended Audience :: Financial and Insurance Industry",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering :: Artificial Intelligence",
]
dependencies = [
    # 核心科学计算
    "numpy>=1.26.0",
    "scipy>=1.11.0",
    "pandas>=2.1.0",
    # 复杂网络分析
    "networkx>=3.2.0",
    # 数据处理
    "pydantic>=2.5.0",
    "pydantic-settings>=2.1.0",
    # 日志
    "python-json-logger>=2.0.0",
]

[project.optional-dependencies]
data = [
    "akshare>=1.10.0",
    "baostock>=0.8.0",
    "yfinance>=0.2.0",
]
web = [
    "fastapi>=0.104.0",
    "uvicorn[standard]>=0.24.0",
    "websockets>=12.0",
]
backtest = [
    "matplotlib>=3.8.0",
    "plotly>=5.18.0",
]

[project.scripts]
qenas = "qenas_cli:main"

[dependency-groups]
dev = [
    "black>=23.11.0",
    "ruff>=0.1.6",
    "mypy>=1.7.0",
    "pre-commit>=3.6.0",
    "pytest>=7.4.0",
    "pytest-asyncio>=0.21.0",
    "pytest-cov>=4.1.0",
]

[tool.hatch.build.targets.wheel]
packages = ["qenas_core", "qenas_data", "qenas_backtest"]

[tool.black]
line-length = 100
target-version = ["py310", "py311", "py312"]

[tool.ruff]
line-length = 100
target-version = "py310"

[tool.ruff.lint]
select = ["E", "F", "W", "I", "N", "UP", "B", "C4"]

[tool.mypy]
python-version = "3.10"
strict = true
ignore_missing_imports = true

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_functions = ["test_*"]
